FInished, in rush. Maybe it will be improved later.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 				</canvas>
 			</div>
 		</section>
-		<script type="text/javascript" src="g.js"></script>
+		<script type="text/javascript" src="min.g.js"></script>
 	</body>
